# voila

./: .gitignore  Dockerfile.fastapi  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
airflow/: .env.example  airflow.cfg  requirements.txt
airflow/dags/: ohlcv_daily.py
app/: main.py  test_endpoints.py
app/api/v1/endpoints/: core_data.py  geospatial.py  market_data.py
app/core/: async_database.py  auth.py  cache_manager.py  circuit_breaker.py  database.py  rate_limit.py  spatial_utils.py
app/models/: geospatial.py  validation.py
data/: tickers.txt
data/geojson/: locations.geojson
frontend/: .env.development  index.html  package.json  pnpm-lock.yaml  repomix.config.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: queryClient.ts
frontend/src/components/Charts/: ChartModal.tsx  ChartRenderer.tsx
frontend/src/components/Dashboard/: HUD.tsx  MarketDashboard.tsx  PerformanceMonitor.tsx  SelectionHistory.tsx  SelectionTools.tsx  SettingsModal.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useMarketData.ts  useSelection.ts  useThreeJS.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: chartsSlice.ts  (+5 more)
frontend/src/types/: api.ts  state.ts
frontend/src/utils/: debug.ts  errors.ts  spatialWorkerManager.ts  stateColors.ts
frontend/src/workers/: spatialWorker.ts
nginx/: Dockerfile  nginx.conf
scrape/: backfill.py  edgar.py  geocoder.py  hydrate.py  pipeline.py  spatial.py  sync.py  tickers.py
shared/: config.py  models.py
(+11 files in other folders)
