[project]
name = "voila"
version = "0.1.0"
description = "volatility analysis, projection, and visualization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "colorama>=0.4.6",
    "duckdb>=1.3.2",
    "fastapi[standard]",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
    "ty>=0.0.1a16",
]

[tool.ruff]
line-length = 80

[tool.uv]
package = true

[tool.setuptools]
packages = ["shared", "scrape", "app"]
